# SpeechFlow

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
SpeechFlow/: pyproject.toml
SpeechFlow/speechflow/: app.py  audio_handler.py  transcription.py  transcription_service.py
speechflow/: chat_service.py  constants.py
speechflow/app/: audio_processor.py  main_app.py  ui_controller.py
speechflow/core/: audio_handler.py  interface.py  styles.tcss
speechflow/services/chat/: base.py  openai_chat.py
speechflow/services/transcription/: google_transcription.py
