[tool.poetry]
name = "speechflow"
version = "0.1.0"
description = ""
authors = ["mfenerich <marcel@feneri.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
textual = "^1.0.0"
openai = "^1.59.7"
python-dotenv = "^1.0.1"
thinkhub = {version = "^0.3.4", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
