[tool.poetry]
name = "speechflow"
version = "0.1.0"
description = ""
authors = ["mfenerich <marcel@feneri.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.14"
pydub = "^0.25.1"
openai = "^1.59.7"
google-cloud-speech = "^2.30.0"
google-cloud-storage = "^2.19.0"
textual = "^1.0.0"
numpy = "^2.2.1"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
